fix declarative comments for swaggo/swag
