# controllers/search_id_controller.go
@@ -9,16 +9,14 @@ import (
 )
 
 // SearchSingerById godoc
-//
-// @Summary		Search singer by Id
-// @Description	Get details of a singer using their unique ID
-// @Tags			singers
-// @Accept			json
-// @Produce		json
-// @Param			id	path		int	true	"Singer ID"
-// @Success		200	{object}	models.Singer
-// @Failure		404	{object}	map[string]string
-// @Router			/singers/{id} [get]
+// @Summary      Get a singer by ID
+// @Description  Retrieves a singer from the database by their ID
+// @Tags         singers
+// @Produce      json
+// @Param        id   path      int  true  "Singer ID"
+// @Success      200  {object}  models.Singer "Successful response with the singer data"
+// @Failure      404  {object}  map[string]string "Error response if singer not found"
+// @Router       /singers/{id} [get]
 func SearchSingerById(c *gin.Context) {
 	var singer models.Singer
 	id := c.Params.ByName("id")
